		- Keep ITypeConverter interface, think through only what I need (e.g. ConvertFromString), and only use that. 
			- only need ConvertFromString method
			- overcomplicating things to extend the .net typeconverter. keep it simple. think through the api.
				- don't just look what's available and use it. Design the api, and go from there. 
			- Sbyte, etc... can be skipped. If the file actually has individual bytes, the user should probably be deciding how to convert them. 
				- only worry about the primary ones, datetime, decimal, int, etc... 
				- only use double. for decimal, float, etc... just use decimaltypeconverter and cast to decimal
				- do the easy, straighforward ones. Leave the rest up to the enduser. 
	- e.g. 
		Before: 
			StringTypeConverter : TypeConverter, ITypeConverter
		After: 
			StringTypeConverter : ITypeConverter
	- LayoutDescriptor
		- shouldn't have knowledge of all the type converters. This should be an abstraction
		- violation of single responsibility principle, and open / closed principle
			- if a new type converter was created, LayoutDescriptor would have to change with current implementation
			- only depend on abstractions in LayoutDescriptor

simplify type TypeConverters
	- think through which ones I want to handle, get rid of all the rest
		- awkward to convert string to sybte, etc... skip
		- provided end user ability to configure this themself (ITypeConverter and AppendField method that accepts one)
Think hard about the api / interface for the TypeConverters, make sure it's what I want it to be... e.g. return object in ConvertFromString? What about a Generic Type instead on the ITypeConverter class? 

Don't worry about deadlines



7/26/18
	- Removed uncommon primitive types.
	- No longer extending .net TypeConverter. Kept it simple, and only implemented pre-existing ITypeConverter. 
		- Changes in progress, perhaps using a generic for return type of ITypeConverter. If too messy, will make it an object. 